# myLittleRenderer

./: .gitignore  CMakeLists.txt  Function.md  README.md  TGAImage.cpp  china.json  geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  mvp.cpp  mvp.h  output.tga  rasterizer.cpp  rasterizer.h  sandbox.cpp  testJson.cpp  tgaimage.cpp  tgaimage.h  translate.cpp  translate.h
Private/: model.cpp  rasterizer.cpp  tgaimage.cpp
Public/: common.h  geometry.h  model.h  rasterizer.h  tgaimage.h  transform.h
Sample/: CMakeLists.txt
Sample/lesson1/: CMakeLists.txt  lesson1.cpp
Sample/lesson2/: CMakeLists.txt  lesson2.cpp
Sample/lesson3/: CMakeLists.txt  lesson3.cpp
